--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-pandas~=1.1.5
-wildhunt~=0.1b0
-ipython~=8.3.0
-setuptools~=61.2.0
-numpy~=1.22.3
-requests~=2.28.0
-astropy~=5.0.4
-dask~=2022.8.1
-scipy~=1.7.3
-matplotlib~=3.5.1
-astroquery~=0.4.6
-pyqt
-reproject
+
+python~=3.9
+numpy
+scipy
+astropy
+matplotlib
+pandas
+ipython
+jupyter
+request
 dask
 astroquery
+reproject
+photuils
+multiprocessing
+tqdm
+fastparquet
+h5py
+pyyaml
+nbsphinx
+nbsphinx-link
