fixed bug in panstarrs survey download, tested catalog online cross match (works! )and continued developing forced photometry integration into the catalog, image class system

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,16 @@ matplotlib
 pandas
 ipython
 jupyter
-request
+requests
 dask
 astroquery
 reproject
-photuils
+photutils
 multiprocessing
 tqdm
 fastparquet
 h5py
 pyyaml
+tables
 nbsphinx
 nbsphinx-link
