solved the dtype saving issue (for now)

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,9 +44,9 @@ install_requires =
     photutils
     tqdm
     fastparquet
-    h5py
+;    h5py
     pyyaml
-    tables
+;    tables
     nbsphinx
     nbsphinx-link
 
