--- a/setup.cfg
+++ b/setup.cfg
@@ -38,15 +38,15 @@ install_requires =
     ipython
     jupyter
     requests
-    dask
+    dask[dataframe]
     astroquery
     reproject
     photutils
     tqdm
     fastparquet
-;    h5py
+    h5py
     pyyaml
-;    tables
+    tables
     nbsphinx
     nbsphinx-link
 
